--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -15,29 +15,29 @@
     /* NavigationContainer.tsx */
     .NavigationContainer {
         @apply border-y dark:border-black-400 pt-1
-            dark:border-black-400 border-gray-100;
+        dark:border-black-400 border-gray-100;
     }
 
     /* NavigationMenu.tsx */
     .NavigationMenu {
         @apply flex-1 space-x-2 dark:text-gray-300
-            items-center flex-row hidden md:flex;
+        items-center flex-row hidden md:flex;
     }
 
     .NavigationMenu.VerticalNavigationMenu {
         @apply flex flex-row justify-between space-x-2 md:justify-start
-            md:flex-col md:space-x-0 md:space-y-2 items-start;
+        md:flex-col md:space-x-0 md:space-y-2 items-start;
     }
 
     /* NavigationItem.tsx */
     .NavigationItem {
         @apply leading-loose rounded-md justify-center
-            transition-colors dark:text-gray-300
-            text-gray-800 flex items-center;
+        transition-colors dark:text-gray-300
+        text-gray-800 flex items-center;
     }
 
     .NavigationItem a {
-        @apply p-2 block flex font-medium items-center justify-center rounded-md text-sm w-full;
+        @apply py-2 px-3 block flex font-medium items-center justify-center rounded-md text-sm w-full;
     }
 
     .NavigationItemActive a {
@@ -50,12 +50,12 @@
 
     .BorderedNavigationMenu .NavigationItemActive a {
         @apply border-b-[0.2rem] border-primary-500 text-current
-            relative top-[1px] bg-transparent rounded-none px-3;
+        relative top-[1px] bg-transparent rounded-none;
     }
 
     .NavigationItemNotActive {
         @apply active:text-primary-700 text-gray-500 dark:text-gray-400
-            dark:hover:text-white hover:text-current hover:text-primary-900;
+        dark:hover:text-white hover:text-current hover:text-primary-900;
     }
 
     .NavigationItemActive {
@@ -74,7 +74,7 @@
     /* SubHeading.tsx */
     .SubHeading {
         @apply text-2xl leading-[2.2rem] text-gray-500
-            dark:text-gray-400 font-normal;
+        dark:text-gray-400 font-normal;
     }
 
     /* Badge.tsx */
@@ -84,12 +84,12 @@
 
     .Badge.ColorNormal {
         @apply text-gray-500 bg-gray-100
-            dark:text-gray-300 dark:bg-black-300;
+        dark:text-gray-300 dark:bg-black-300;
     }
 
     .Badge.ColorSuccess {
         @apply bg-green-100 dark:bg-black-300
-            text-green-700 font-semibold;
+        text-green-700 font-semibold;
     }
 
     .Badge.SizeNormal {
@@ -103,8 +103,8 @@
     /* Hero.tsx */
     .Hero {
         @apply text-4xl dark:text-white
-            font-extrabold tracking-tight
-            md:leading-none my-2 sm:my-6;
+        font-extrabold tracking-tight
+        md:leading-none my-2 sm:my-6;
     }
 
     /** Alert.tsx */
@@ -150,25 +150,26 @@
     }
 
     .TextFieldInputContainer {
-        @apply dark:border-black-200 w-full border-gray-200 border
-            text-gray-800 dark:text-gray-200 transition-all duration-300
-            text-sm items-center flex rounded-lg font-medium
-            bg-white hover:bg-gray-50 dark:bg-black-400 ring-primary-500
-            focus:border-transparent focus-within:ring-2 shadow-sm
-            dark:focus:bg-black-400 hover:border-gray-300
-            dark:hover:border-black-200 relative flex;
+        @apply dark:border-black-200 dark:hover:border-black-100 w-full
+        border-gray-200 border relative flex h-11
+        text-gray-800 dark:text-gray-200 transition-all duration-300
+        text-sm items-center flex rounded-md font-medium
+        bg-white hover:bg-gray-50 dark:bg-black-500 ring-primary-500
+        focus:border-transparent focus-within:ring-2
+        focus-within:border-transparent focus-within:hover:border-transparent
+        shadow-sm dark:focus:bg-black-400 hover:border-gray-300;
     }
 
     .TextFieldInputContainerDisabled {
         @apply bg-gray-100 hover:bg-gray-100 dark:bg-black-200
-            hover:dark:bg-black-200 cursor-not-allowed;
+        hover:dark:bg-black-200 cursor-not-allowed;
     }
 
     .TextFieldInputContainer input.TextFieldInput,
     .TextFieldInputContainer input.TextFieldInput:-webkit-autofill,
     .TextFieldInputContainer input.TextFieldInput:-webkit-autofill:hover,
     .TextFieldInputContainer input.TextFieldInput:-webkit-autofill:focus {
-        @apply bg-transparent outline-none py-0.5 flex-auto h-10 px-2.5;
+        @apply bg-transparent outline-none flex-auto px-2.5;
     }
 
     .TextFieldInputContainer textarea {
@@ -214,41 +215,40 @@
 
     /* Button.tsx */
     .Button {
-        @apply rounded-lg font-bold transition-colors duration-300
-            flex items-center justify-center;
+        @apply rounded-md font-bold transition-colors duration-300
+        flex items-center justify-center;
     }
 
     .Button.ButtonPrimary {
         @apply bg-primary-500 text-primary-contrast
-            hover:bg-primary-600 active:bg-primary-700
-            dark:text-primary-contrast
-            outline-primary-800 ring-primary-300;
+        hover:bg-primary-600 active:bg-primary-700
+        dark:text-primary-contrast
+        outline-primary-800 ring-primary-300;
     }
 
     .Button.ButtonDanger {
-        @apply bg-red-400 active:bg-red-600
-            hover:bg-red-400 text-white ring-red-300;
+        @apply bg-red-400 hover:bg-red-500 active:bg-red-600 text-white ring-red-300;
     }
 
     .Button.ButtonSecondary {
         @apply bg-gray-100 dark:bg-black-300 active:bg-gray-200
-            dark:outline-black-100
-            outline-gray-50 hover:bg-gray-200
-            dark:hover:bg-black-200 dark:active:bg-black-400;
+        dark:outline-black-100
+        outline-gray-50 hover:bg-gray-200
+        dark:hover:bg-black-200 dark:active:bg-black-400;
     }
 
     .Button.ButtonTransparent {
         @apply hover:bg-gray-50 dark:hover:bg-black-300
-            dark:active:bg-black-400
-            text-gray-800 dark:text-gray-300
-            dark:outline-black-300 outline-gray-50;
+        dark:active:bg-black-400
+        text-gray-800 dark:text-gray-300
+        dark:outline-black-300 outline-gray-50;
     }
 
     .Button.GradientButton {
-        @apply flex h-16 !bg-gradient-to-r md:w-auto
-            from-indigo-600 text-center text-white md:h-auto
-            justify-center to-red-500 hover:from-indigo-800
-            transition-all hover:to-red-600 hover:shadow-xl;
+        @apply flex !bg-gradient-to-r md:w-auto
+        from-indigo-600 text-center text-white md:h-auto
+        justify-center to-red-500 hover:from-indigo-800
+        transition-all hover:to-red-600 hover:shadow-xl;
     }
 
     .ButtonNormal {
@@ -256,7 +256,7 @@
     }
 
     .ButtonLarge {
-        @apply text-lg py-3 px-5;
+        @apply text-lg py-3 px-5 h-14;
     }
 
     .ButtonSmall {
@@ -265,12 +265,12 @@
 
     .Button.ButtonPrimaryOutline {
         @apply bg-transparent text-primary-700
-            border-2 border-primary-500 hover:text-white;
+        border-2 border-primary-500 hover:text-white;
     }
 
     .Button.ButtonDangerOutline {
         @apply bg-transparent text-red-400
-            border-2 border-red-400 hover:text-white;
+        border-2 border-red-400 hover:text-white;
     }
 
     .Button.ButtonPrimaryFlat {
@@ -289,19 +289,19 @@
     /* IconButton.tsx */
     .IconButton {
         @apply rounded-full bg-transparent hover:bg-gray-100
-            dark:hover:bg-black-300 transition-colors duration-300
-            dark:active:bg-gray-100 dark:active:bg-black-200 p-1
-            outline-primary-300 focus:ring ring-primary-400;
+        dark:hover:bg-black-300 transition-colors duration-300
+        dark:active:bg-gray-100 dark:active:bg-black-200 p-1
+        outline-primary-300 focus:ring ring-primary-400;
     }
 
     /* ImageUploadInput.tsx */
     .ImageUploadInput {
         @apply TextFieldInput cursor-pointer relative
-            border-dashed bg-white dark:bg-black-400
-            hover:bg-gray-50 dark:hover:bg-black-300
-            transition-colors duration-300 border
-            border-gray-200 dark:border-black-200
-            py-2.5 px-2 rounded-lg;
+        border-dashed bg-white dark:bg-black-400
+        hover:bg-gray-50 dark:hover:bg-black-300
+        transition-colors duration-300 border
+        border-gray-200 dark:border-black-200
+        py-2.5 px-2 rounded-lg;
     }
 
     /* Footer.tsx */
@@ -330,21 +330,21 @@
 
     .PopoverPanel {
         @apply absolute rounded-bl-md rounded-br-md shadow-lg
-            z-10 px-2 transform sm:px-0
-            w-full bg-white dark:bg-black-300;
+        z-10 px-2 transform sm:px-0
+        w-full bg-white dark:bg-black-300;
     }
 
     .PopoverPanelItem {
         @apply flex bg-transparent
-            hover:bg-gray-50 dark:hover:bg-black-400 active:bg-gray-100
-            dark:active:bg-black-300
-            items-center cursor-pointer transition
-            duration-150 ease-in-out focus:outline-none;
+        hover:bg-gray-50 dark:hover:bg-black-400 active:bg-gray-100
+        dark:active:bg-black-300
+        items-center cursor-pointer transition
+        duration-150 ease-in-out focus:outline-none;
     }
 
     .PopoverItemLabel {
         @apply text-sm font-semibold text-gray-700
-            dark:text-gray-300 py-3 px-4 ellipsify;
+        dark:text-gray-300 py-3 px-4 ellipsify;
     }
 
     .PopoverItemIcon {
@@ -363,7 +363,7 @@
 
     .Tab:not(.TabSelected) {
         @apply hover:bg-gray-50 dark:active:bg-black-300
-            cursor-pointer dark:bg-black-500 dark:hover:bg-black-400;
+        cursor-pointer dark:bg-black-500 dark:hover:bg-black-400;
     }
 
     .TabSelected,
@@ -373,14 +373,14 @@
 
     /* ListBox.tsx */
     .ListBoxButton {
-        @apply TextFieldInputContainer px-3 py-2.5 text-left
-            font-semibold hover:text-current dark:text-current;
+        @apply TextFieldInputContainer px-2.5 h-11 text-left
+        font-semibold hover:text-current dark:text-current;
     }
 
     .ListBoxButton.ListBoxButtonAlt {
         @apply small pl-3 py-1 font-bold bg-gray-100 hover:bg-gray-200
-            dark:bg-black-300 dark:hover:bg-black-200 dark:text-gray-200
-            border-transparent;
+        dark:bg-black-300 dark:hover:bg-black-200 dark:text-gray-200
+        border-transparent;
     }
 
     .ListBoxButtonOpen {
@@ -394,16 +394,16 @@
 
     .ListBoxOptionsContainer {
         @apply absolute w-full mt-0.5 overflow-auto
-            text-base bg-white dark:bg-black-300
-            rounded-lg shadow-md max-h-96 z-50;
+        text-base bg-white dark:bg-black-300
+        rounded-lg shadow-md max-h-96 z-50;
     }
 
     /* ListBoxOption.tsx */
     .ListBoxOption {
         @apply cursor-default select-none relative
-            py-3 pl-4 pr-4 font-semibold
-            text-sm transition-colors duration-75
-            border-b dark:border-b-black-400 border-gray-50
+        py-3 pl-4 pr-4 font-semibold
+        text-sm transition-colors duration-75
+        border-b dark:border-b-black-400 border-gray-50
     }
 
     .ListBoxOption.ListBoxOption[aria-disabled='true'] {
@@ -416,7 +416,7 @@
 
     .ListBoxOptionActive {
         @apply cursor-pointer text-gray-900
-            bg-gray-50 dark:bg-black-300 dark:text-white;
+        bg-gray-50 dark:bg-black-300 dark:text-white;
     }
 
     .ListBoxOptionSelected {
@@ -429,16 +429,16 @@
 
     .ListBoxOptionDescription {
         @apply text-gray-600 dark:text-gray-400
-            leading-tight font-medium text-[0.7rem];
+        leading-tight font-medium text-[0.7rem];
     }
 
     /* FallbackUserAvatar.tsx */
     .FallbackUserAvatar {
         @apply h-9 w-9 text-lg flex items-center
-            transition-all justify-center
-            bg-primary-500 hover:bg-primary-600
-            rounded-full uppercase font-extrabold
-            text-black-500 text-primary-contrast;
+        transition-all justify-center
+        bg-primary-500 hover:bg-primary-600
+        rounded-full uppercase font-extrabold
+        text-black-500 text-primary-contrast;
     }
 
     /* Dropdown.tsx */
@@ -448,17 +448,17 @@
 
     .DropdownMenuItemsContainer {
         @apply z-10 absolute right-0 w-full lg:w-60 mt-2
-            lg:mt-2 origin-top-right bg-white dark:bg-black-400
-            lg:rounded-md shadow-xl focus:outline-none
-            border-t border-gray-50 dark:border-black-300 py-1;
+        lg:mt-2 origin-top-right bg-white dark:bg-black-400
+        lg:rounded-md shadow-xl focus:outline-none
+        border-t border-gray-50 dark:border-black-300 py-1;
 
-            top: var(--dropdown-menu-items-top, auto);
-            bottom: var(--dropdown-menu-items-bottom, auto);
+        top: var(--dropdown-menu-items-top, auto);
+        bottom: var(--dropdown-menu-items-bottom, auto);
     }
 
     .DropdownItem {
         @apply flex flex-1 items-center w-full border-none
-            sm:text-sm dark:text-white duration-200 px-2;
+        sm:text-sm dark:text-white duration-200;
     }
 
     .DropdownMenuButtonContainer {
@@ -476,12 +476,15 @@
 
     .DropdownButtonContainer button {
         @apply dark:active:bg-black-300 active:bg-gray-50
-            dark:outline-black-400 h-full;
+        dark:outline-black-400 h-full;
     }
 
-    .DropdownActiveItem {
-        @apply bg-gray-50 dark:bg-black-300
-            text-black-500 dark:text-current;
+    .DropdownActiveItem .Button:not(.static) {
+        @apply bg-gray-50 dark:bg-black-300 rounded-none text-black-500 dark:text-current;
+    }
+
+    .DropdownActiveItem .Button.static {
+        @apply cursor-text;
     }
 
     .DropdownDivider {
@@ -491,13 +494,13 @@
     /* Documentation */
     .DocumentationSidebarContainer {
         @apply mt-6 sticky inset-0 hidden
-            md:flex overflow-y-auto h-screen;
+        md:flex overflow-y-auto h-screen;
     }
 
     .DocumentationSidebarItem {
         @apply pl-4 border-l-2 dark:active:bg-black-400 active:bg-gray-100
-            md:text-[0.8rem] dark:hover:border-l-primary-400
-            py-1.5 px-3 transition-colors duration-300;
+        md:text-[0.8rem] dark:hover:border-l-primary-400
+        py-1.5 px-3 transition-colors duration-300;
     }
 
     .DocumentationSidebarItemContainer:last-child {
@@ -506,29 +509,29 @@
 
     .DocumentationSidebarItemSelected {
         @apply font-semibold dark:text-primary-500
-            border-l-primary-400;
+        border-l-primary-400;
     }
 
     .DocumentationSidebarItemNotSelected {
         @apply hover:border-l-primary-400 dark:hover:text-white
-            dark:border-l-black-400 font-medium;
+        dark:border-l-black-400 font-medium;
     }
 
     .AuthProviderButton {
         @apply border-gray-200 bg-gray-100 dark:border-black-300
-            hover:bg-gray-200 active:bg-gray-300 hover:border-gray-300
-            dark:hover:border-black-300 dark:bg-black-300
-            dark:hover:bg-black-400 dark:active:bg-black-500
-            dark:outline-black-300 transition-all duration-300 relative
-            text-gray-600 dark:text-gray-200;
+        hover:bg-gray-200 active:bg-gray-300 hover:border-gray-300
+        dark:hover:border-black-300 dark:bg-black-300
+        dark:hover:bg-black-400 dark:active:bg-black-500
+        dark:outline-black-300 transition-all duration-300 relative
+        text-gray-600 dark:text-gray-200;
     }
 
     .Toggle {
-        @apply h-6 w-12 cursor-pointer appearance-none border-opacity-20
-        bg-black-200 duration-300 ease-in-out rounded-xl;
+        @apply h-6 w-12 cursor-pointer appearance-none
+        bg-gray-600 dark:bg-gray-300 duration-300 ease-in-out rounded-xl;
 
         transition: all 0.25s ease-in-out;
-        box-shadow: calc(1.5rem * -1) 0 0 2px #fff inset, 0 0 0 2px #fff inset;
+        box-shadow: calc(1.5rem * -1) 0 0 2px #efefef inset, 0 0 0 2px #efefef inset;
     }
 
     .dark .Toggle {
@@ -536,7 +539,7 @@
     }
 
     .Toggle:hover {
-        box-shadow: calc(1.5rem * -1) 0 0 2px #efefef inset, 0 0 0 2px #efefef inset;
+        box-shadow: calc(1.5rem * -1) 0 0 2px #ddd inset, 0 0 0 2px #ddd inset;
     }
 
     .dark .Toggle:hover {
@@ -551,9 +554,9 @@
 
     .Toggle:checked {
         @apply border-opacity-100 bg-opacity-100
-            bg-primary-500 border-primary-400;
+        bg-primary-500 border-primary-400;
 
-        box-shadow: 1.5rem 0 0 2px #fff inset, 0 0 0 2px #fff inset;
+        box-shadow: 1.5rem 0 0 2px #eee inset, 0 0 0 2px #eee inset;
     }
 
     .dark .Toggle:checked {
@@ -562,13 +565,13 @@
 
     .Stepper {
         @apply flex space-x-2 justify-between shadow
-            dark:border-black-400 dark:shadow
-            dark:bg-black-400 px-2 py-1 rounded-md;
+        dark:border-black-400 dark:shadow
+        dark:bg-black-400 px-2 py-1 rounded-md;
     }
 
     .StepperDivider {
         @apply flex bg-gray-300 dark:bg-black-200
-            h-[2px] flex-1 transition-colors;
+        h-[2px] flex-1 transition-colors;
 
         align-items: center;
         justify-items: center;
@@ -591,8 +594,8 @@
 
     .StepperStepCircle {
         @apply rounded-full w-[35px] h-[35px] shadow duration-75
-            font-bold flex justify-center items-center
-            bg-gray-200 dark:bg-black-200 transition-colors;
+        font-bold flex justify-center items-center
+        bg-gray-200 dark:bg-black-200 transition-colors;
     }
 
     .StepperStep.StepperStepSelected {
@@ -605,7 +608,7 @@
 
     .StepperStep {
         @apply flex items-center space-x-4 dark:text-gray-400
-            text-current transition-colors p-2;
+        text-current transition-colors p-2;
     }
 
     .StepperStep:not(.StepperStepSelected):not([disabled]).hover .StepperStepCircle {
@@ -625,15 +628,15 @@
      */
     .FaqItem {
         @apply rounded-xl border border-gray-100
-            dark:border-black-300 bg-gray-50 p-8
-            dark:bg-black-500
+        dark:border-black-300 bg-gray-50 p-8
+        dark:bg-black-500
     }
 
     /* PlanSelector.tsx */
     .PlanSelectorRadioItem {
         @apply relative flex cursor-pointer rounded-lg border border-gray-50
-            px-5 py-4 shadow focus:outline-none dark:border-black-400
-            transition-colors;
+        px-5 py-4 shadow focus:outline-none dark:border-black-400
+        transition-colors;
     }
 
     .PlanSelectorRadioItemNonActive {
