--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -103,8 +103,8 @@
     /* Hero.tsx */
     .Hero {
         @apply text-4xl dark:text-white
-        font-extrabold tracking-tight
-        md:leading-none my-2 sm:my-6;
+            font-extrabold tracking-tight
+            md:leading-none my-2 sm:my-6;
     }
 
     /** Alert.tsx */
@@ -165,11 +165,19 @@
         hover:dark:bg-black-200 cursor-not-allowed;
     }
 
-    .TextFieldInputContainer input.TextFieldInput,
-    .TextFieldInputContainer input.TextFieldInput:-webkit-autofill,
-    .TextFieldInputContainer input.TextFieldInput:-webkit-autofill:hover,
-    .TextFieldInputContainer input.TextFieldInput:-webkit-autofill:focus {
+    .TextFieldInputContainer input {
         @apply bg-transparent outline-none flex-auto px-2.5;
+    }
+
+    .TextFieldInputContainer input:-webkit-autofill,
+    .TextFieldInputContainer input:-webkit-autofill:hover,
+    .TextFieldInputContainer input:-webkit-autofill:active,
+    .TextFieldInputContainer input:-webkit-autofill:focus {
+        box-shadow: inset 0 0 0 1000px transparent;
+    }
+
+    .TextFieldInputContainer input[data-autocompleted] {
+        @apply bg-transparent;
     }
 
     .TextFieldInputContainer textarea {
@@ -253,7 +261,7 @@
     }
 
     .ButtonLarge {
-        @apply text-lg py-3 px-5 h-14;
+        @apply py-3 px-5 h-12;
     }
 
     .ButtonSmall {
@@ -298,7 +306,7 @@
         hover:bg-gray-50 dark:hover:bg-black-300
         transition-colors duration-300 border
         border-gray-200 dark:border-black-200
-        py-2.5 px-2 rounded-lg;
+        p-2.5 rounded-lg;
     }
 
     /* Footer.tsx */
@@ -515,10 +523,10 @@
     }
 
     .AuthProviderButton {
-        @apply border-gray-200 bg-gray-100 dark:border-black-300
-        hover:bg-gray-200 active:bg-gray-300 hover:border-gray-300
-        dark:hover:border-black-300 dark:bg-black-300
-        dark:hover:bg-black-300/80 dark:active:bg-black-400
+        @apply border border-gray-200 dark:border-black-300
+        hover:bg-gray-100 active:bg-gray-200 hover:border-gray-300
+        dark:hover:border-black-400 dark:bg-black-400
+        dark:hover:bg-black-400/80 dark:active:bg-black-400
         transition-all relative text-gray-600 dark:text-gray-200;
     }
 
