--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -571,9 +571,8 @@
     }
 
     .Stepper {
-        @apply flex space-x-2 justify-between shadow
-        dark:border-black-400 dark:shadow
-        dark:bg-black-400 px-2 py-1 rounded-md;
+        @apply flex space-x-2 justify-between shadow-sm
+        dark:border-black-400 dark:bg-black-400 px-2 py-1 rounded-md;
     }
 
     .StepperDivider {
@@ -592,7 +591,7 @@
 
     .StepperStepSelected + .StepperDivider,
     .StepperStep.CompletedStep + .StepperDivider {
-        @apply bg-primary-500;
+        @apply bg-primary-500 text-primary-contrast;
     }
 
     .StepperStep:not(.StepperStepSelected):not(.CompletedStep):hover + .StepperDivider {
@@ -619,7 +618,7 @@
     }
 
     .StepperStep:not(.StepperStepSelected):not([disabled]).hover .StepperStepCircle {
-        @apply bg-primary-500 text-white;
+        @apply bg-primary-500 text-primary-contrast;
     }
 
     .StepperStep:not(.StepperStepSelected):hover {
