--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -7,14 +7,14 @@
 
     .AppSidebar {
         @apply flex flex-row py-4 justify-center
-        relative bg-gray-50 dark:bg-black-500
+        relative dark:bg-black-500
         h-screen hidden lg:flex border-r transition-all duration-100
         border-gray-100 dark:border-black-300;
     }
 
     .AppSidebarItem {
-        @apply rounded-md items-center transition-colors border-transparent
-        w-full pr-12 w-full py-2.5 px-4 font-medium flex space-x-3 transition-colors;
+        @apply rounded-md items-center transition-colors border-transparent text-sm
+        w-full pr-12 w-full p-2 font-medium flex space-x-2 transition-colors duration-300;
     }
 
     .AppSidebarCollapsed .AppSidebarItem {
@@ -27,19 +27,31 @@
     }
 
     .AppSidebarItemActive {
-        @apply bg-primary-500 text-white font-semibold;
+        @apply bg-gray-100 dark:bg-primary-500 dark:text-primary-contrast font-semibold;
+    }
+
+    .AppSidebarCollapsed .AppSidebarItemActive {
+        @apply bg-primary-500;
     }
 
     .AppSidebarItemNotActive {
         @apply dark:text-gray-300 dark:hover:text-white text-gray-600 ring-transparent
             active:bg-gray-200 dark:active:bg-black-300 dark:active:bg-black-300
-            hover:bg-gray-100 dark:hover:bg-black-400 dark:bg-black-500;
+            hover:bg-gray-50 dark:hover:bg-black-400 dark:bg-black-500;
+    }
+
+    .AppSidebarItemIcon {
+        @apply text-gray-600 dark:text-primary-contrast;
+    }
+
+    .AppSidebarCollapsed .AppSidebarItemActive .AppSidebarItemIcon {
+        @apply bg-primary-500 text-primary-contrast;
     }
 
     .AppSidebarFooterItem {
         @apply flex text-sm space-x-2
-        items-center text-gray-500
-        dark:text-gray-300 dark:hover:text-primary-500;
+        items-center text-gray-500 hover:text-gray-800
+        dark:text-gray-300 dark:hover:text-white;
     }
 
     .AppSidebarCollapsed .AppSidebarFooterItem {
